--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,6 @@
 .ipynb_checkpoints/
 .nbgrader.log
 
-
-
 ## latex/pdflatex files
 *.aux
 *.glo
@@ -36,3 +34,8 @@
 __pycache__/
 *.py[cod]
 *$py.class
+
+# others
+.coverage
+.pytest_cache/
+*.egg-info/
